Added Android 6.0 support, Removed unused resources